# hallmark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  popup.html  settings.html  tsconfig.json  vite.config.ts  wizard.html
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-tests.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  capture.md  cleanup.md  code-review.md  complete-milestone.md  config.md  debug.md  discuss-phase.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract-learnings.md  fast.md  forensics.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  manager.md  map-codebase.md  milestone-summary.md  mvp-phase.md  new-milestone.md  new-project.md  pause-work.md  phase.md  plan-phase.md  plan-review-convergence.md  pr-branch.md  profile-user.md  progress.md  quick.md  (+18 more)
.claude/get-shit-done/references/: artifact-types.md  context-budget.md  model-profile-resolution.md  planner-mvp-mode.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/templates/codebase/: structure.md
.claude/get-shit-done/workflows/: ai-integration-phase.md  autonomous.md  complete-milestone.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  ingest-docs.md  mvp-phase.md  new-milestone.md  new-project.md  note.md  plan-phase.md  plan-review-convergence.md  profile-user.md  reapply-patches.md  resume-project.md  secure-phase.md  sketch.md  spec-phase.md  sync-skills.md  transition.md  ui-phase.md  ui-review.md  undo.md  update.md  validate-phase.md  verify-phase.md  verify-work.md
.claude/get-shit-done/workflows/discuss-phase/modes/: advisor.md  power.md
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: drag-region-undersized.md  github-link-dead.md  popup-repeat-fire-stuck.md  settings-wizard-css-surface-regression.md  tray-menu-extra-header-and-black-icon.md  updates-error-wording-misleading.md  webview-warmup-blank-screen.md
.planning/phases/01-detection-pipeline-foundation/: 01-01-SUMMARY.md  01-01-tauri-rust-scaffold-PLAN.md  01-02-SUMMARY.md  01-02-source-trait-and-sqlite-store-PLAN.md  01-03-SUMMARY.md  01-03-path-discovery-PLAN.md  01-04-SUMMARY.md  01-04-goldberg-adapter-and-watcher-core-PLAN.md  01-05-SUMMARY.md  01-05-cross-source-dedup-and-cli-harness-PLAN.md  01-FIX-SUMMARY.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md  empirical-goldberg-schema-NOTES.md
.planning/phases/02-premium-ui-popup-companion-game-session/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UI-SPEC.md  02-VERIFICATION.md
.planning/phases/03-remaining-source-adapters/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-REVIEW.md  03-SECURITY.md  03-UAT.md  03-VERIFICATION.md  empirical-vdf-NOTES.md
.planning/phases/04-polish-distribution/: 04-01a-PLAN.md  04-01a-SUMMARY.md  04-01b-PLAN.md  04-01b-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-08-PLAN.md  04-08-SUMMARY.md  04-09-PLAN.md  04-09-SUMMARY.md  04-10-PLAN.md  04-10-SUMMARY.md  04-11-PLAN.md  04-11-SUMMARY.md  04-12-PLAN.md  04-12-SUMMARY.md  04-13a-PLAN.md  04-13a-SUMMARY.md  04-13b-PLAN.md  04-13b-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-GAP-CLOSURE-VERIFICATION.md  04-PATTERNS.md  04-RESEARCH.md  04-UAT.md  04-UI-SPEC.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/sfx/: README.md
scripts/: gen_placeholder_sfx.rs
src/: FirstRunWizard.tsx  Settings.tsx  main-companion.tsx  main-popup.tsx  main-settings.tsx  main-wizard.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: companion.json  popup.json  settings.json  wizard.json
src-tauri/src/: audio.rs  autostart.rs  error.rs  first_run.rs  lib.rs  main.rs  monitor.rs  paths.rs  popup_queue.rs  portable_mode.rs  settings_window.rs  test_trigger.rs  tray.rs  ui.rs  updater_glue.rs
src-tauri/src/game_detect/: mod.rs  process_scan.rs  steam_state.rs
src-tauri/src/schema/: appcache.rs  cache.rs  goldberg_meta.rs  mod.rs  steam_api.rs
src-tauri/src/sources/: cream_api.rs  goldberg.rs  mod.rs  sse.rs  steam_legit.rs  vdf_binary.rs
src-tauri/src/store/: mod.rs  queries.rs
src-tauri/src/store/migrations/: 001_initial.sql  002_schema_cache.sql
src-tauri/src/watcher/: dedup.rs  mod.rs
src-tauri/tests/: companion_lifecycle.rs  integration_phase1.rs  integration_phase3.rs  popup_pipeline_e2e.rs
src/components/: AchievementRow.tsx  CompanionHeader.tsx  EmptyState.tsx  FilterBar.tsx  PopupCard.tsx  SettingsSourceRow.tsx  SkeletonRow.tsx  SortToggle.tsx  UpdateModal.tsx  WizardSourceRow.tsx
src/hooks/: useGameSession.ts
src/styles/: companion.css  popup.css  settings.css
tests/fixtures/goldberg/: README.md
tests/fixtures/goldberg/480/: achievements.json
