[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
rust-version = "1.85"
license    = "MIT"
repository = "https://github.com/reemamazon44/hallmark"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
panic         = "abort"
