[package]
name         = "hallmark"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "PSN/Xbox-grade achievement satisfaction for PC gaming."
publish      = false

[build-dependencies]
# tauri-build versioning is independent of the tauri runtime — runtime is 2.11, build is 2.6.x.
# See: https://github.com/tauri-apps/tauri (workspace pins tauri-build to its own track).
tauri-build = { version = "2.6", features = [] }

[dependencies]
# WR-06: All versions below verified against crates.io 2026-05-08 via
# `cargo search` + `cargo build`. tokio 1.52, sha2 0.11, rusqlite 0.39,
# dirs 6.0, notify-debouncer-full 0.7 are all published stable releases.
# CLAUDE.md cites notify-debouncer-full 0.5 as the reference; we use 0.7
# (newer; same notify 8.2 backend) — track in IN-05.
tauri                 = { version = "2.11", features = [] }
tokio                 = { version = "1.52", features = ["rt-multi-thread", "sync", "macros", "time", "fs", "signal"] }
notify                = "8.2"
notify-debouncer-full = "0.7"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
rusqlite              = { version = "0.39", features = ["bundled"] }
keyvalues-parser      = "0.2"
walkdir               = "2.5"
sha2                  = "0.11"
anyhow                = "1.0"
async-trait           = "0.1"
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "fmt"] }
dirs                  = "6.0"
uuid                  = { version = "1.23", features = ["v4", "serde"] }
rodio                 = { version = "0.22", features = ["wav"] }
sysinfo               = "0.38"
reqwest               = { version = "0.13", features = ["json", "rustls"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }

[features]
default        = []
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "hallmark"
path = "src/main.rs"

[[bin]]
name = "hallmark-cli"
path = "src/bin/hallmark-cli.rs"

[lib]
name       = "hallmark_lib"
path       = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
